# live-world-engine

./: .gitignore  CMakeLists.txt  README.md
assets/reference/: crab.xml  snapping_turtle.xml
assets/reference/cdda_retrodays/: tile_config.json
data/creatures/: crab.xml  rabbit.xml  snake.xml
data/tiles/: empty.xml  grass.xml  rock.xml  soil.xml
devtools/: Makefile_linux  Makefile_macos  Makefile_windows
rogue/: Game.cpp  Makefile  README.md
rogue/map/: Map.cpp
rogue/noise/: README.md
src/: Game.cpp  lwe.cpp  lwe.h  main.cpp
src/content/: content.cpp  tiles.cpp
src/core/: base_loader.cpp  base_loader.h  index.cpp  index.h  pathfinding.cpp  pathfinding.h  settings.h  world.cpp  world.h
src/core/base/: index.cpp  index.h  loader.cpp  loader.h  manager.cpp  manager.h  registry.cpp  registry.h
src/creatures/: component.h  creature.cpp  creature.h  index.cpp  index.h  loader.cpp  loader.h  manager.cpp  manager.h  registry.cpp  registry.h
src/engine/core/: game.cpp
src/engine/organisms/: index.cpp  organism.cpp  organism.h
src/engine/organisms/types/: BoneRose.h  Hadespede.cpp  HumboldtTree.h  index.h
src/engine/tiles/: functions.h  manager.cpp  manager.h  tile.cpp  tile.h
src/engine/util/: arithmetics.cpp
src/engine/world/: entity.cpp  index.cpp  tile.cpp  world.cpp  world.h
src/lib/: index.cpp  index.h  tinyxml2.h
src/map/: Map.cpp
src/organisms/: organism.cpp  organism.h
src/organisms/types/: BoneRose.cpp  BoneRose.h  Hadespede.h  HumboldtTree.cpp  HumboldtTree.h  index.h
src/structures/: color.h  index.cpp  index.h  vec2.h  vec3.cpp  vec3.h
src/tile/: Tile.cpp  types.h
src/tiles/: functions.cpp  functions.h  index.cpp  index.h  loader.cpp  loader.h  manager.cpp  manager.h  registry.cpp  registry.h  tile.cpp  tile.h
src/util/: arithmetics.cpp  arithmetics.h  index.h  logging.h
src/utils/: arithmetics.cpp  arithmetics.h  geometry.cpp  geometry.h  index.cpp  index.h  logging.cpp  logging.h
templates/: Makefile_windows
